refactor process - I stage