@@ -1,5 +1,22 @@
 package io.github.scitia.config.aleatoricism.core;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.github.copilot.sdk.CopilotClient;
+import com.github.copilot.sdk.events.SessionIdleEvent;
+import com.github.copilot.sdk.json.MessageOptions;
+import com.github.copilot.sdk.json.PermissionHandler;
+import com.github.copilot.sdk.json.SessionConfig;
+import com.github.copilot.sdk.json.ToolDefinition;
+import io.github.scitia.config.aleatoricism.command.AleatoricCommandRequest;
+import io.github.scitia.config.aleatoricism.command.AleatoricCommandResponse;
+import io.github.scitia.config.aleatoricism.tools.AgenticBusinessTool;
+import jakarta.validation.ConstraintViolation;
+import jakarta.validation.ConstraintViolationException;
+import jakarta.validation.Valid;
+import jakarta.validation.Validator;
+import org.springframework.stereotype.Component;
+import org.springframework.validation.annotation.Validated;
+
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -9,29 +26,11 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.Collectors;
 
-import org.springframework.stereotype.Component;
-import org.springframework.validation.annotation.Validated;
-
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.github.copilot.sdk.CopilotClient;
-import com.github.copilot.sdk.events.SessionIdleEvent;
-import com.github.copilot.sdk.json.MessageOptions;
-import com.github.copilot.sdk.json.PermissionHandler;
-import com.github.copilot.sdk.json.SessionConfig;
-import com.github.copilot.sdk.json.ToolDefinition;
-import io.github.scitia.config.aleatoricism.tools.AgenticBusinessTool;
-import io.github.scitia.config.aleatoricism.command.AleatoricCommandRequest;
-import io.github.scitia.config.aleatoricism.command.AleatoricCommandResponse;
-import jakarta.validation.ConstraintViolation;
-import jakarta.validation.ConstraintViolationException;
-import jakarta.validation.Valid;
-import jakarta.validation.Validator;
-
 @Validated
 @Component
 public class AleatoricCopilotGateway {
 
-    private final ObjectMapper objectMapper = new ObjectMapper();;
+    private final ObjectMapper objectMapper = new ObjectMapper();
     private final Validator validator;
     private final List<AgenticBusinessTool> businessTools;
 
@@ -74,7 +73,7 @@ public class AleatoricCopilotGateway {
                     .get();
 
             var done = new CompletableFuture<Void>();
-            session.on(SessionIdleEvent.class, idle -> done.complete(null));
+            session.on(SessionIdleEvent.class, _ -> done.complete(null));
 
             session.send(new MessageOptions().setPrompt(buildAgentPrompt(request))).get();
             done.get();
@@ -93,7 +92,7 @@ public class AleatoricCopilotGateway {
             throw new IllegalStateException("Agent did not invoke any business tool");
         }
 
-        Object processResult = executions.get(executions.size() - 1).result();
+        Object processResult = executions.getLast().result();
         if (executions.size() > 1) {
             processResult = Map.of(
                     "selectedTools", executions.stream().map(ToolExecution::toolName).toList(),
@@ -114,7 +113,7 @@ public class AleatoricCopilotGateway {
         try {
             payloadJson = objectMapper.writeValueAsString(request.payload());
             metadataJson = objectMapper.writeValueAsString(request.metadata());
-        } catch (Exception exception) {
+        } catch (Exception _) {
             payloadJson = String.valueOf(request.payload());
             metadataJson = String.valueOf(request.metadata());
         }
